Edited wiki page through web user interface.

--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -4,6 +4,11 @@
 
 = Release Notes =
 
+== Trunk HEAD ==
+
+  * Moving error reasons out of response message into its own top level type in the
+proto. Added client side error reasons to the error codes to be consistent.
+
 == Version 1.2 (SVN Revision 12) ==
 
   * Errors that occur on server side are not relayed back to client. Client has new error reasons for them in the controller.
