--- a/java/CHANGELOG.txt
+++ b/java/CHANGELOG.txt
@@ -1,4 +1,4 @@
-Version 1.x (SVN trunk) YYYY-MM-DD
+Version 1.3.2 (SVN Revision 87) 2010-11-04
 
 * Protobuf 2.3.0 compatible
 * Reorganized tree to match Maven conventions
