Edited wiki page ReleaseNotes through web user interface.

--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -8,6 +8,11 @@
 
   * ...
 
+== Version 2.0 (SVN Revision 89) ==
+
+  * Add true async support to Java implementation.
+  * Add persistent connection support to Java. Multiple rpcs over single connection.
+
 == Version 1.3.2 (SVN Revision 89) ==
 
   * Add metadata to python/setup.py
