--- a/trunk/java/CHANGELOG.txt
+++ b/trunk/java/CHANGELOG.txt
@@ -1,5 +1,9 @@
 Version 1.x (SVN Trunk) YYYY-MM-DD
 
+* ...
+
+Version 2.0 (SVN Revision 94) 2011-05-11
+
 * Protobuf 2.4.0 compatible
 * Add persistent connection support
 * Protobuf 2.3.0 compatible
